--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/style.css">
 
 
-      <title>Company Profil WeddingKuy</title>
+      <title>Company Profil Wedding-Kuy</title>
     </head>
 
     <body id="home" class="scrollspy">
@@ -24,7 +24,7 @@
         <nav class="blue darken-2">
           <div class="container">
             <div class="nav-wrapper">
-              <a href="#home" class="brand-logo">Wedding_Kuy Decoration</a>
+              <a href="#home" class="brand-logo">Wedding-Kuy Decoration</a>
               <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
               <ul class="right hide-on-med-and-down">
               <li><a href="#About">About Us</a></li>
@@ -47,7 +47,7 @@
       <div class="slider">
           <ul class="slides">
             <li>
-              <img src="Wedding-decor.jpg">
+              <img src="Wedding-decor1.jpg">
               <div class="caption center-align">
                 <h3>Get Married!</h3>
                 <h5 class="light grey-text text-lighten-3">Pilihan terbaik bersama Kami.</h5>
@@ -63,7 +63,7 @@
               <li>
                   <img src="wedding-decor3.jpg">
                   <div class="caption center-align">
-                    <h3>Semoga SaMaWa!</h3>
+                    <h3>Semoga Sa-Ma-Wa!</h3>
                     <h5 class="light grey-text text-lighten-3">Terimakasih atas kunjungannya.</h5>
                   </div>
               </li>
