--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="slider">
           <ul class="slides">
             <li>
-              <img src="Wedding-decor1.jpg">
+              <img src="wedding-decor1.jpg">
               <div class="caption center-align">
                 <h3>Get Married!</h3>
                 <h5 class="light grey-text text-lighten-3">Pilihan terbaik bersama Kami.</h5>
@@ -63,7 +63,7 @@
               <li>
                   <img src="wedding-decor3.jpg">
                   <div class="caption center-align">
-                    <h3>Semoga Sa-Ma-Wa!</h3>
+                    <h3>Semoga Sa Ma Wa!</h3>
                     <h5 class="light grey-text text-lighten-3">Terimakasih atas kunjungannya.</h5>
                   </div>
               </li>
